# treeflix

./: CMakeLists.txt  LICENSE  README.md
bptree/: Makefile  a.out  bp_tree.c  bp_tree.h  ibtree.idx  main.c  source_code.c  test.c  tree
cmake/: CleanAll.cmake
include/: bp_tree.h  buffer.h  interface.h  list.h  movie.h
src/: buffer.c  main.c  movie.c
src/bptree/: bp_tree.c  node.c
src/interface/: interface.c
src/list/: list.c
src/main/: main.c
src/movie/: movie.c
test/: main.c
